# fleet-oracle2

./: .gitignore  2026-06-16.md  AGENTS.md  CRON_MANIFEST.md  README.md  fleet-construct-dashboard.html  fleet-dashboard.html  fleet-inventory-2026-06-15.md  fleet-shell.css  reflex-status.html  rotation-dashboard.html
audit/: backend-audit-2026-06-17.md  cron-audit-2026-06-17.md  oracle-audit-2026-06-17.md
colony/: EXPERIMENTS.md  FLEET_ARCHITECTURE.md  FORGE_LAB.md  GAMES.md  GAMES_STATUS.md  HALL_OF_CRABS.md  ORACLE.json  SPAWN_QUEUE.json  cell-sandbox.sh  cell-synthesizer-debug.rs  cell-taxonomist.py  colony-api.py  colony-games.py  colony-mafia.py  colony-market.py  conserve_server_patch.py  forge-lab.py  manifest.toml  mayor-last-run.json
colony/cell/: Cargo.toml
colony/cell/src/: main.rs
conservation-meter/: Cargo.toml
conservation-meter/src/: main.rs  metrics.rs
data/: .anomaly-state.json  bench-gc-pid.json  forge-bundle.json  pulse-self-tune-state.json  rotation-feed.json
docs/: AGENT_PROTOCOL_V3.md  FLEET_OS.md  RESILIENCE.md  TAILWIND.md  cell-sequencer-alignment.md  core-ecosystem-analysis.md  distribution-audit.md  extracted-patterns-2026-06-18.md  fleet-architecture-omnibus.md  fleet-bridge-analysis.md  oracle2-deep-study-report-2026-06-16.md  pincher-ci-fix-status.md  protocol-conformance-guide.md  pypi-publish-proposal.md  snail-shell-protocol.md  ternary-fleet-survey.md
fleet/: sketch-reconciliation.md
harbor-daemon/: Cargo.toml
harbor-daemon/src/: bottle.rs  cli.rs  main.rs  store.rs
integrations/: bottle_integration_test.py  colony-games-darwin-reputation.py  colony_conservation_scorer.py  conservation-runtime.py  conservation_meter_daemon.py  superinstance_bottle.py
scripts/bottle-cli/: Cargo.toml
scripts/bottle-cli/src/: bottle.rs  harbor.rs  local.rs  main.rs
(+93 files in other folders)
