[package]
name = "conservation-meter"
version = "0.1.0"
edition = "2021"
description = "γ+η=C runtime — measures the conservation constraint across the fleet"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tokio-util = "0.7"
