[package]
name = "harbor-daemon"
version = "0.1.0"
edition = "2021"
description = "A lightweight harbor listener for bottle messages in the fleet ecosystem"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
