[package]
name = "cell"
version = "0.1.0"
edition = "2021"
description = "Universal colony worker — reads task, executes, writes results, exits."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
libc = "0.2"
