[package]
name = "bottle"
version = "0.1.0"
edition = "2021"
description = "CLI tool for the Bottle protocol — write, read, forward, and toss bottles"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
